fix: remove 'jump' when showing errors

--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,11 @@ img {
   position: absolute;
   left: 40px;
 }
+
+.error {
+  height: 0.5rem;
+}
+
+.submit-button {
+  margin-top: 20px;
+}
